Fixed sizing of header and hero svg on small screens

--- a/src/main.css
+++ b/src/main.css
@@ -104,7 +104,7 @@ footer p {
 }
 
 @media only screen and (max-width: 860px) {
-    header img {
+    header>a {
         display: none;
     }
     header nav li a {
